--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
     "version": "0.0.2",
     "private": true,
     "dependencies": {
-        "body-parser": "1.15.0",
+        "body-parser": "1.18.3",
         "express": "~4.13.4",
         "isomorphic-fetch": "^2.2.1",
+        "lodash": "^4.17.10",
         "react": "^16.3.0",
         "react-dom": "^16.3.0",
         "react-redux": "^5.0.6",
         "react-router": "^3.0.2",
         "redux": "^3.7.2",
         "redux-thunk": "^2.2.0",
-        "sequelize": "^3.20.0",
+        "sequelize": "^4.0.0",
         "sqlite3": "^4.0.1"
     },
     "devDependencies": {
