--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "body-parser": "1.18.3",
         "express": "~4.13.4",
+        "express-graphql": "^0.6.12",
+        "graphql": "^0.13.2",
         "isomorphic-fetch": "^2.2.1",
         "lodash": "^4.17.10",
         "react": "^16.3.0",
