--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
         "express": "~4.13.4",
         "express-graphql": "^0.6.12",
         "graphql": "^0.13.2",
+        "graphql-tag": "^2.9.2",
         "isomorphic-fetch": "^2.2.1",
         "lodash": "^4.17.10",
         "react": "^16.3.0",
+        "react-apollo": "^2.1.8",
         "react-dom": "^16.3.0",
         "react-redux": "^5.0.6",
         "react-router": "^3.0.2",
