fixed displaying the list of the customers via apollo

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.2",
     "private": true,
     "dependencies": {
-        "apollo-client-preset": "^1.0.8",
+        "apollo-boost": "^0.1.10",
         "body-parser": "1.18.3",
         "express": "~4.13.4",
         "express-graphql": "^0.6.12",
