--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dependencies": {
         "apollo-boost": "^0.1.10",
         "body-parser": "1.18.3",
-        "express": "~4.13.4",
+        "express": "^4.16.3",
         "express-graphql": "^0.6.12",
         "graphql": "^0.13.2",
         "graphql-tag": "^2.9.2",
