--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "dependencies": {
         "body-parser": "1.18.3",
-        "express": "~4.13.4",
+        "express": "^4.16.3",
         "isomorphic-fetch": "^2.2.1",
         "lodash": "^4.17.10",
         "react": "^16.3.0",
@@ -14,7 +14,7 @@
         "redux": "^3.7.2",
         "redux-thunk": "^2.2.0",
         "sequelize": "^4.0.0",
-        "sqlite3": "^4.0.1"
+        "sqlite3": "^4.0.4"
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
