--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "apollo-boost": "^0.1.10",
+        "axios": "^0.19.2",
         "body-parser": "1.18.3",
         "express": "^4.16.3",
         "express-graphql": "^0.6.12",
@@ -17,6 +18,7 @@
         "react-redux": "^5.0.6",
         "react-router": "^3.0.2",
         "redux": "^3.7.2",
+        "redux-saga": "^1.1.3",
         "redux-thunk": "^2.2.0",
         "sequelize": "^4.0.0",
         "sqlite3": "^4.0.4"
@@ -31,6 +33,7 @@
         "webpack": "^3.5.5"
     },
     "scripts": {
-        "build": "webpack && node app.js"
+        "start": "node app.js",
+        "dev": "rm -rf public/js/bundle.js & npm start & webpack --watch"
     }
 }
